Fix key name for node-exporter

--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -27,7 +27,7 @@ monitoring:
   kube-state-metrics:
     enabled: true
 
-  prometheus-node-exporter:
+  node-exporter:
     enabled: true
     
   prometheus-operator-crds:
