--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -116,6 +116,9 @@ vmagent:
           - source_labels: [__meta_kubernetes_node_name]
             target_label: instance
             replacement: $1
+          - source_labels: [ __meta_kubernetes_node_name ]
+            target_label: node
+            replacement: $1
         honor_timestamps: false
 
       # Scrape cAdvisor metrics (container metrics) using direct mode
@@ -208,6 +211,9 @@ vmagent:
           - source_labels: [__meta_kubernetes_pod_node_name]
             action: replace
             target_label: node
+          - source_labels: [ __meta_kubernetes_pod_node_name ]
+            target_label: instance
+            replacement: $1
           # Set cardinality limit for auto-instrumentation targets
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
             regex: ".*beyla.*"
