--- a/.github/configs/ct.yaml
+++ b/.github/configs/ct.yaml
@@ -7,6 +7,8 @@ chart-dirs:
 chart-repos:
   - oodle-ai=https://oodle-ai.github.io/helm-charts
   - vector=https://helm.vector.dev
+  - victoriametrics=https://victoriametrics.github.io/helm-charts/
+  - prometheus-community=https://prometheus-community.github.io/helm-charts
 validate-chart-schema: true
 validate-maintainers: true
 validate-yaml: true
