--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -133,6 +133,8 @@ jobs:
           cd source
           helm repo add oodle-ai https://oodle-ai.github.io/helm-charts
           helm repo add vector https://helm.vector.dev
+          helm repo add victoriametrics https://victoriametrics.github.io/helm-charts
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 
           "${CR_TOOL_PATH}/cr" package "${{ steps.parse-chart.outputs.chartpath }}" --config "${CR_CONFIGFILE}" --package-path "${CR_PACKAGE_PATH}"
 
