--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -214,10 +214,43 @@ vmagent:
           - source_labels: [ __meta_kubernetes_pod_node_name ]
             target_label: instance
             replacement: $1
-          # Set cardinality limit for auto-instrumentation targets
+
+      # Scrape beyla with hardcoded oodle_metrics path
+      - job_name: oodle-beyla
+        kubernetes_sd_configs:
+          - role: pod
+        metrics_path: /oodle_metrics
+        relabel_configs:
+          - action: drop
+            source_labels: [__meta_kubernetes_pod_container_init]
+            regex: true
+          # Only scrape beyla pods
           - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            action: keep
             regex: ".*beyla.*"
-            target_label: __series_limit__
+          # Use prometheus port annotation if present, otherwise default
+          - source_labels:
+              [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
+            target_label: __address__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            action: replace
+            target_label: node
+          - source_labels: [ __meta_kubernetes_pod_node_name ]
+            target_label: instance
+            replacement: $1
+          # Set cardinality limit for beyla oodle metrics
+          - target_label: __series_limit__
             replacement: "1000000"
 
 # Configuration for oodle-k8s-auto-instrumentation chart (using alias: auto-instrumentation)
