--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -376,6 +376,10 @@ event-exporter:
     repository: kubernetes-event-exporter
     tag: 1.7.0-debian-12-r46
 
+  global:
+    security:
+      allowInsecureImages: true
+
   extraEnvVars:
     - name: CLUSTER_NAME
       value: "" # Kubernetes Cluster Name
