Make secret outside the helm chart

--- a/charts/oodle-k8s-observability/templates/configmap.yaml
+++ b/charts/oodle-k8s-observability/templates/configmap.yaml
@@ -7,17 +7,17 @@ metadata:
   labels:
     {{- include "oodle-k8s-observability.labels" . | nindent 4 }}
 data:
-  cluster_name: {{ .Values.oodleConfig.clusterName | quote }}
-  oodle_instance: {{ .Values.oodleConfig.oodleInstance | quote }}
+  clusterName: {{ .Values.oodleConfig.clusterName | quote }}
+  oodleInstance: {{ .Values.oodleConfig.oodleInstance | quote }}
   {{- if .Values.oodleConfig.oodleLogsHost }}
-  oodle_logs_host: {{ .Values.oodleConfig.oodleLogsHost | quote }}
+  oodleLogsHost: {{ .Values.oodleConfig.oodleLogsHost | quote }}
   {{- else }}
-  oodle_logs_host: {{ printf "https://%s-logs.collector.oodle.ai" .Values.oodleConfig.oodleInstance | quote }}
+  oodleLogsHost: {{ printf "https://%s-logs.collector.oodle.ai" .Values.oodleConfig.oodleInstance | quote }}
   {{- end }}
   {{- if .Values.oodleConfig.oodleMetricsHost }}
-  oodle_metrics_host: {{ .Values.oodleConfig.oodleMetricsHost | quote }}
+  oodleMetricsHost: {{ .Values.oodleConfig.oodleMetricsHost | quote }}
   {{- else }}
-  oodle_metrics_host: {{ printf "https://%s.collector.oodle.ai" .Values.oodleConfig.oodleInstance | quote }}
+  oodleMetricsHost: {{ printf "https://%s.collector.oodle.ai" .Values.oodleConfig.oodleInstance | quote }}
   {{- end }}
 {{- end }}
 
