--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -1,3 +1,34 @@
+# Configuration for Oodle - ConfigMap for centralized configuration
+# 
+# IMPORTANT: Before installing this chart, create a Kubernetes Secret with your Oodle API key:
+#   kubectl create secret generic oodle-api-key --from-literal=apiKey=YOUR_API_KEY
+# 
+# The chart expects a secret named 'oodle-api-key' with key 'apiKey' by default.
+# If using a different secret name, override the secretKeyRef in vmagent, vector-aggregator, and event-exporter.
+oodleConfig:
+  # Enable ConfigMap creation by this chart
+  # Set to false if you want to manage the ConfigMap externally
+  # If false, you must create a ConfigMap named 'oodle-k8s-observability-config' with these keys:
+  #   - clusterName
+  #   - oodleInstance
+  #   - oodleLogsHost
+  #   - oodleMetricsHost
+  enabled: true
+  
+  # Cluster name for Kubernetes cluster identification
+  clusterName: "" # Kubernetes Cluster Name
+  
+  # Oodle instance identifier
+  oodleInstance: "" # Oodle Instance (e.g., inst-your-instance-id)
+  
+  # Oodle logs host endpoint (optional)
+  # If not specified, defaults to: https://{oodleInstance}-logs.collector.oodle.ai
+  oodleLogsHost: "" # Oodle Logs Host (e.g., https://inst-your-instance-logs.collector.oodle.ai)
+  
+  # Oodle metrics host endpoint (optional)
+  # If not specified, defaults to: https://{oodleInstance}.collector.oodle.ai
+  oodleMetricsHost: "" # Oodle Metrics Host (e.g., https://inst-your-instance.collector.oodle.ai)
+
 # Configuration for kube-state-metrics chart
 kube-state-metrics:
   enabled: true
@@ -61,14 +92,37 @@ vmagent:
     prometheus.io/port: "8429"
     prometheus.io/path: "/metrics"
 
+  # Environment variables from ConfigMap and Secret
+  env:
+    - name: OODLE_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: oodle-api-key
+          key: apiKey
+    - name: CLUSTER_NAME
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: clusterName
+    - name: OODLE_INSTANCE
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleInstance
+    - name: OODLE_METRICS_HOST
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleMetricsHost
+
   # Remote write configuration for sending metrics to Oodle
   remoteWrite:
-    - url: "" # Oodle Prometheus Metrics Write Endpoint
-      headers: "X-API-KEY: <>" # Oodle API Key
+    - url: "%{OODLE_METRICS_HOST}/v1/prometheus/%{OODLE_INSTANCE}/write"
+      headers: "X-API-KEY: %{OODLE_API_KEY}"
+      forcePromProto: true
 
   extraArgs:
     promscrape.suppressDuplicateScrapeTargetErrors: "true"
-    remoteWrite.forcePromProto: "true"
 
   # -- Extra scrape configs that will be appended to `config`
   extraScrapeConfigs: [ ]
@@ -79,7 +133,7 @@ vmagent:
       scrape_interval: 60s
       scrape_timeout: 1m
       external_labels:
-        cluster: "" # Kubernetes Cluster Name
+        cluster: "%{CLUSTER_NAME}"
 
     scrape_configs:
       # Note: vmagent scrapes itself via prometheus.io/scrape annotation
@@ -261,8 +315,12 @@ vmagent:
 auto-instrumentation:
   enabled: true
   beyla:
-    env:
-      BEYLA_KUBE_CLUSTER_NAME: "" # Kubernetes Cluster Name
+    # Use envValueFrom to reference ConfigMap values
+    envValueFrom:
+      BEYLA_KUBE_CLUSTER_NAME:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: clusterName
 
 # Configuration for Vector Agent
 vector-agent:
@@ -271,7 +329,10 @@ vector-agent:
 
   env:
     - name: CLUSTER_NAME
-      value: "" # Kubernetes Cluster Name
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: clusterName
 
   tolerations:
     - effect: NoSchedule
@@ -328,11 +389,20 @@ vector-aggregator:
   enabled: true
   env:
     - name: OODLE_INSTANCE
-      value: "" # Oodle Instance
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleInstance
     - name: OODLE_API_KEY
-      value: "" # Oodle API Key
+      valueFrom:
+        secretKeyRef:
+          name: oodle-api-key
+          key: apiKey
     - name: OODLE_LOGS_HOST
-      value: "" # Oodle Logs Host
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleLogsHost
 
   podLabels:
     # Make sure `vector-agent` collects logs from `vector-aggregator`.
@@ -382,16 +452,29 @@ event-exporter:
 
   extraEnvVars:
     - name: CLUSTER_NAME
-      value: "" # Kubernetes Cluster Name
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: clusterName
     - name: OODLE_INSTANCE
-      value: "" # Oodle Instance
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleInstance
     - name: OODLE_API_KEY
-      value: "" # Oodle API Key
+      valueFrom:
+        secretKeyRef:
+          name: oodle-api-key
+          key: apiKey
     - name: OODLE_LOGS_HOST
-      value: "" # Oodle Logs Host
+      valueFrom:
+        configMapKeyRef:
+          name: oodle-k8s-observability-config
+          key: oodleLogsHost
 
   config:
     clusterName: "${CLUSTER_NAME}"
+    maxEventAgeSeconds: 600
     logLevel: info
     logFormat: pretty
     route:
