--- a/charts/oodle-k8s-observability/templates/vmagent-config.yaml
+++ b/charts/oodle-k8s-observability/templates/vmagent-config.yaml
@@ -1,6 +1,5 @@
 {{- if and .Values.vmagent.enabled .Values.vmagent.managedScrapeConfig.enabled }}
 {{- include "oodle-k8s-observability.validateVmagentConfig" . }}
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,23 +7,276 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "oodle-k8s-observability.labels" . | nindent 4 }}
-  annotations:
-    # Checksum of the scrape config content for tracking changes
-    checksum/content: {{ include "oodle-k8s-observability.vmagentScrapeConfigChecksum" . }}
 data:
   scrape.yml: |
-    {{- include "oodle-k8s-observability.vmagentScrapeConfigContent" . | nindent 4 }}
----
-# ConfigMap containing the scrape config checksum
-# This is referenced by vmagent pods via an environment variable
-# When the checksum changes, the env var value changes, triggering a pod restart
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: vmagent-scrape-config-checksum
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "oodle-k8s-observability.labels" . | nindent 4 }}
-data:
-  checksum: {{ include "oodle-k8s-observability.vmagentScrapeConfigChecksum" . | quote }}
+    global:
+      scrape_interval: {{ .Values.vmagent.managedScrapeConfig.scrape_interval }}
+      scrape_timeout: {{ .Values.vmagent.managedScrapeConfig.scrape_timeout }}
+      external_labels:
+        cluster: "%{CLUSTER_NAME}"
+
+    scrape_configs:
+      # Note: vmagent scrapes itself via prometheus.io/scrape annotation
+      # discovered by kubernetes-pods job below
+
+      {{- if .Values.vmagent.scrapeJobs.kubernetesApiServers.enabled }}
+      # Scrape Kubernetes API servers
+      - job_name: kubernetes-apiservers
+        {{- with .Values.vmagent.scrapeJobs.kubernetesApiServers.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.kubernetesApiServers.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: endpoints
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: default;kubernetes;https
+        {{- with .Values.vmagent.scrapeJobs.kubernetesApiServers.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.kubernetesNodes.enabled }}
+      # Scrape Kubelet metrics from each node using direct mode
+      - job_name: kubernetes-nodes
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodes.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodes.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: node
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        metrics_path: /metrics
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - source_labels: [__address__]
+            regex: ([^:]+):(.*)
+            target_label: __address__
+            replacement: $1:10250
+          # Set instance to node name (hostname) instead of IP
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: instance
+            replacement: $1
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: node
+            replacement: $1
+        honor_timestamps: false
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodes.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.kubernetesNodesCadvisor.enabled }}
+      # Scrape cAdvisor metrics (container metrics) using direct mode
+      - job_name: kubernetes-nodes-cadvisor
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodesCadvisor.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodesCadvisor.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: node
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        metrics_path: /metrics/cadvisor
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - source_labels: [__address__]
+            regex: ([^:]+):(.*)
+            target_label: __address__
+            replacement: $1:10250
+          # Set instance to node name (hostname) instead of IP
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: instance
+            replacement: $1
+        honor_timestamps: false
+        {{- with .Values.vmagent.scrapeJobs.kubernetesNodesCadvisor.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.kubeStateMetrics.enabled }}
+      # Scrape kube-state-metrics (only the one deployed by this chart)
+      - job_name: kube-state-metrics
+        {{- with .Values.vmagent.scrapeJobs.kubeStateMetrics.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.kubeStateMetrics.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          # Filter by custom label to ensure we only scrape our deployed instance
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: "oodle-kube-state-metrics"
+          - source_labels: [__meta_kubernetes_service_name]
+            action: keep
+            regex: ".*kube-state-metrics.*"
+          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: http
+        {{- with .Values.vmagent.scrapeJobs.kubeStateMetrics.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.nodeExporter.enabled }}
+      # Scrape node-exporter (only the one deployed by this chart)
+      - job_name: node-exporter
+        {{- with .Values.vmagent.scrapeJobs.nodeExporter.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.nodeExporter.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          # Filter by custom label to ensure we only scrape our deployed instance
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: "oodle-node-exporter"
+          - source_labels: [__meta_kubernetes_service_name]
+            action: keep
+            regex: ".*node-exporter.*"
+          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: metrics
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            target_label: instance
+            replacement: $1
+        {{- with .Values.vmagent.scrapeJobs.nodeExporter.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.kubernetesPods.enabled }}
+      # Scrape pods with prometheus.io/scrape: true annotation
+      - job_name: kubernetes-pods
+        {{- with .Values.vmagent.scrapeJobs.kubernetesPods.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.kubernetesPods.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - action: drop
+            source_labels: [__meta_kubernetes_pod_container_init]
+            regex: true
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+            action: keep
+            regex: true
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+            action: replace
+            target_label: __metrics_path__
+            regex: (.+)
+          - source_labels:
+              [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
+            target_label: __address__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            action: replace
+            target_label: node
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            target_label: instance
+            replacement: $1
+        {{- with .Values.vmagent.scrapeJobs.kubernetesPods.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- if .Values.vmagent.scrapeJobs.oodleBeyla.enabled }}
+      # Scrape beyla with hardcoded oodle_metrics path
+      - job_name: oodle-beyla
+        {{- with .Values.vmagent.scrapeJobs.oodleBeyla.scrape_interval }}
+        scrape_interval: {{ . }}
+        {{- end }}
+        {{- with .Values.vmagent.scrapeJobs.oodleBeyla.scrape_timeout }}
+        scrape_timeout: {{ . }}
+        {{- end }}
+        kubernetes_sd_configs:
+          - role: pod
+        metrics_path: /oodle_metrics
+        relabel_configs:
+          - action: drop
+            source_labels: [__meta_kubernetes_pod_container_init]
+            regex: true
+          # Only scrape beyla pods
+          - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
+            action: keep
+            regex: ".*beyla.*"
+          # Use prometheus port annotation if present, otherwise default
+          - source_labels:
+              [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
+            target_label: __address__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            action: replace
+            target_label: node
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            target_label: instance
+            replacement: $1
+          # Set cardinality limit for beyla oodle metrics
+          - target_label: __series_limit__
+            replacement: "1000000"
+        {{- with .Values.vmagent.scrapeJobs.oodleBeyla.metric_relabel_configs }}
+        metric_relabel_configs:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+      {{- end }}
+
+      {{- with .Values.vmagent.extraScrapeConfigs }}
+      # Extra scrape configs
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 {{- end }}
