--- a/charts/oodle-k8s-observability/values.yaml
+++ b/charts/oodle-k8s-observability/values.yaml
@@ -176,6 +176,10 @@ vmagent:
 
   extraArgs:
     promscrape.suppressDuplicateScrapeTargetErrors: "true"
+    # Check for scrape config changes periodically. When managedScrapeConfig
+    # is used, then periodic config check is required in case any updates
+    # are made to the scrape config.
+    promscrape.configCheckInterval: "5m"
     # Maximum disk space per remote write URL for persistent queue
     # ⚠️  MUST be set to ~85% of your storage size (PersistentVolume or emptyDir)
     # Currently set for: 20Gi storage → 20Gi * 0.85 = 17GB
@@ -221,6 +225,15 @@ vmagent:
     # Global scrape settings (only used when managedScrapeConfig.enabled: true)
     scrape_interval: 60s
     scrape_timeout: 1m
+    # External labels added to all scraped metrics
+    # The 'cluster' label uses %{CLUSTER_NAME} which is resolved from the ConfigMap
+    # Add additional labels as needed:
+    #   external_labels:
+    #     cluster: "%{CLUSTER_NAME}"
+    #     environment: production
+    #     region: us-west-2
+    external_labels:
+      cluster: "%{CLUSTER_NAME}"
   
   # ⚠️  NOTE:
   # If managedScrapeConfig.enabled is true, then configMap must be set to
